# pyimgcaptcha

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pyimgcaptcha/: __init__.py  module.py
tests/: test_generate_captcha.py
